--- a/index.html
+++ b/index.html
@@ -23,24 +23,32 @@
         // replace whatever is currently in the body tag of the html to an empty string (clear the html in the browser)
         $body.html('');
 
-        // grab the final element's number in the streams.home array
-        var index = streams.home.length - 1;
-        // while the array still contains an element/tweet
-        while (index >= 0) {
-          // locate the tweet at the index in streams.home
-          var tweet = streams.home[index];
-          // create a div for a single tweet
-          var $tweet = $('<div class="userTweet"></div>');
-          // apply a link for each username using custom data attribute
-          var $username = $(`<a class="user" href="#" data-username="${tweet.user}"></a>`);
-          $username.text(`@${tweet.user}`);
-          // insert tweet to the empty div with username, message and timestamp
-          $tweet.append($username, ': ' + tweet.message + '<br><b> Posted on </b>' + tweet.created_at + '<br><br>');
-          // attach the tweet div to the html body
-          $tweet.appendTo($body);
-          // decrement the index value by 1 to move towards the beginning of the array
-          index --;
-        }
+        // load new tweets button
+        var $button = $('<button class="loadTweetsButton"> </button>');
+        $button.text('Load new Tweets');
+        $button.appendTo($body);
+
+        // on click event, load new tweets to feed
+        $(".loadTweetsButton").on("click", function() {
+          // grab the final element's number in the streams.home array
+          var index = streams.home.length - 1;
+          // while the array still contains an element/tweet
+          while (index >= 0) {
+            // locate the tweet at the index in streams.home
+            var tweet = streams.home[index];
+            // create a div for a single tweet
+            var $tweet = $('<div class="userTweet"></div>');
+            // apply a link for each username using custom data attribute
+            var $username = $(`<a class="user" href="#" data-username="${tweet.user}"></a>`);
+            $username.text(`@${tweet.user}`);
+            // insert tweet to the empty div with username, message and timestamp
+            $tweet.append($username, ': ' + tweet.message + '<br><b> Posted on </b>' + tweet.created_at + '<br><br>');
+            // attach the tweet div to the html body
+            $tweet.appendTo($body);
+            // decrement the index value by 1 to move towards the beginning of the array
+            index--;
+          }
+        });
 
       });
 
